src/app.css
@import "tailwindcss";

@theme {
	--color-primary: var(--color-primary);
	--font-primary: var(--font-primary);
	--font-caption: "Patrick Hand SC", cursive;
}

:root {
	--color-primary: rgb(255, 100, 50);
	--font-primary: 'Inter', sans-serif;
}

html,
body {
	margin: 0;
	padding: 0;
    print-color-adjust: exact;
	-webkit-print-color-adjust: exact !important;
}

* {
	box-sizing: border-box;
}

.text-fluid {
	font-size: clamp(2rem, 4vw, 4rem);
}

.month-0 /* ene */ { --font-primary: Bangers; }
.month-1 /* feb */ { --font-primary: Limelight; }
.month-2 /* mar */ { --font-primary: Indie Flower; }
.month-3 /* abr */ { --font-primary: Kiwi Maru; }
.month-4 /* may */ { --font-primary: Cinzel; }
.month-5 /* jun */ { --font-primary: Sour Gummy; }
.month-6 /* jul */ { --font-primary: Rampart One; }
.month-7 /* ago */ { --font-primary: Rye; }
.month-8 /* sep */ { --font-primary: Agu Display; }
.month-9 /* oct */ { --font-primary: Mystery Quest; }
.month-10 /* nov */ { --font-primary: Metal Mania; }
.month-11 /* dic */ { --font-primary: Rubik Moonrocks; }

[data-theme="default"] .month-0 /* ene */ { --color-primary: #eb56dc; }
[data-theme="default"] .month-1 /* feb */ { --color-primary: #a979fa; }
[data-theme="default"] .month-2 /* mar */ { --color-primary: #5d6bed; }
[data-theme="default"] .month-3 /* abr */ { --color-primary: #37b3f7; }
[data-theme="default"] .month-4 /* may */ { --color-primary: #58d8da; }
[data-theme="default"] .month-5 /* jun */ { --color-primary: #24caa8; }
[data-theme="default"] .month-6 /* jul */ { --color-primary: #30bc66; }
[data-theme="default"] .month-7 /* ago */ { --color-primary: #9dc95b; }
[data-theme="default"] .month-8 /* sep */ { --color-primary: #facc74; }
[data-theme="default"] .month-9 /* oct */ { --color-primary: #ffac3a; }
[data-theme="default"] .month-10 /* nov */ { --color-primary: #dc8374; }
[data-theme="default"] .month-11 /* dic */ { --color-primary: #dc445d; }

[data-theme="legacy"] .month-0 /* ene */ { --color-primary: #30bc66; }
[data-theme="legacy"] .month-1 /* feb */ { --color-primary: #eb56dc; }
[data-theme="legacy"] .month-2 /* mar */ { --color-primary: #dc8374; }
[data-theme="legacy"] .month-3 /* abr */ { --color-primary: #9dc95b; }
[data-theme="legacy"] .month-4 /* may */ { --color-primary: #37b3f7; }
[data-theme="legacy"] .month-5 /* jun */ { --color-primary: #5d6bed; }
[data-theme="legacy"] .month-6 /* jul */ { --color-primary: #ffac3a; }
[data-theme="legacy"] .month-7 /* ago */ { --color-primary: #a979fa; }
[data-theme="legacy"] .month-8 /* sep */ { --color-primary: #facc74; }
[data-theme="legacy"] .month-9 /* oct */ { --color-primary: #58d8da; }
[data-theme="legacy"] .month-10 /* nov */ { --color-primary: #24caa8; }
[data-theme="legacy"] .month-11 /* dic */ { --color-primary: #dc445d; }

[data-theme="high-contrast"] .month-0 /* ene */ { --color-primary: #FF4500; }
[data-theme="high-contrast"] .month-1 /* feb */ { --color-primary: #FFC300; }
[data-theme="high-contrast"] .month-2 /* mar */ { --color-primary: #A4C639; }
[data-theme="high-contrast"] .month-3 /* abr */ { --color-primary: #009B48; }
[data-theme="high-contrast"] .month-4 /* may */ { --color-primary: #008B8B; }
[data-theme="high-contrast"] .month-5 /* jun */ { --color-primary: #00BFFF; }
[data-theme="high-contrast"] .month-6 /* jul */ { --color-primary: #0047AB; }
[data-theme="high-contrast"] .month-7 /* ago */ { --color-primary: #7B1FA2; }
[data-theme="high-contrast"] .month-8 /* sep */ { --color-primary: #D5006D; }
[data-theme="high-contrast"] .month-9 /* oct */ { --color-primary: #FF69B4; }
[data-theme="high-contrast"] .month-10 /* nov */ { --color-primary: #FF7F50; }
[data-theme="high-contrast"] .month-11 /* dic */ { --color-primary: #E60000; }

[data-theme="gemini"] .month-0 /* ene */ { --color-primary: #FF6B00; }
[data-theme="gemini"] .month-1 /* feb */ { --color-primary: #FFC400; }
[data-theme="gemini"] .month-2 /* mar */ { --color-primary: #Cddc39; }
[data-theme="gemini"] .month-3 /* abr */ { --color-primary: #00A86B; }
[data-theme="gemini"] .month-4 /* may */ { --color-primary: #0097A7; }
[data-theme="gemini"] .month-5 /* jun */ { --color-primary: #00B0FF; }
[data-theme="gemini"] .month-6 /* jul */ { --color-primary: #1565C0; }
[data-theme="gemini"] .month-7 /* ago */ { --color-primary: #7B1FA2; }
[data-theme="gemini"] .month-8 /* sep */ { --color-primary: #D81B60; }
[data-theme="gemini"] .month-9 /* oct */ { --color-primary: #FF7043; }
[data-theme="gemini"] .month-10 /* nov */ { --color-primary: #C2185B; }
[data-theme="gemini"] .month-11 /* dic */ { --color-primary: #E60000; }

